feat: major change : save, load, parameter, new nav,etc
