# back/json/model.go
@@ -5,8 +5,8 @@ import (
 )
 
 type ModelPort struct {
-	ID        string                  `json:"id" validate:"required"`
-	Direction enum.ModelPortDirection `json:"type" validate:"required"`
+	ID   string                  `json:"id" validate:"required"`
+	Type enum.ModelPortDirection `json:"type" validate:"required"`
 }
 
 type ModelConnection struct {
@@ -15,18 +15,41 @@ type ModelConnection struct {
 }
 
 type ModelLink struct {
-	ModelID string `json:"modelId" validate:"required"`
-	Port    string `json:"port" validate:"required"`
+	InstanceID string `json:"instanceId" validate:"required"`
+	Port       string `json:"port" validate:"required"`
 }
 
 type ModelStyle struct {
-	Width  int `json:"width" validate:"required"`
-	Height int `json:"height" validate:"required"`
+	Width  float64 `json:"width" validate:"required"`
+	Height float64 `json:"height" validate:"required"`
+}
+
+type ModelColors struct {
+	BodyBackgroundColor   string `json:"bodyBackgroundColor,omitempty"`
+	HeaderBackgroundColor string `json:"headerBackgroundColor,omitempty"`
+	HeaderTextColor       string `json:"headerTextColor,omitempty"`
 }
 
 type ModelPosition struct {
-	X int `json:"x" validate:"required"`
-	Y int `json:"y" validate:"required"`
+	X float64 `json:"x" validate:"required"`
+	Y float64 `json:"y" validate:"required"`
+}
+
+type ParameterType string
+
+const (
+	ParameterTypeInt    ParameterType = "int"
+	ParameterTypeFloat  ParameterType = "float"
+	ParameterTypeBool   ParameterType = "bool"
+	ParameterTypeString ParameterType = "string"
+	ParameterTypeObject ParameterType = "object"
+)
+
+type ModelParameter struct {
+	Name        string        `json:"name" validate:"required"`
+	Type        ParameterType `json:"type" validate:"required"`
+	Value       interface{}   `json:"value" validate:"required"`
+	Description string        `json:"description,omitempty"`
 }
 
 type ToolbarPosition string
@@ -46,9 +69,12 @@ type ModelMetadata struct {
 	ToolbarPosition     *ToolbarPosition `json:"toolbarPosition,omitempty"`
 	Position            ModelPosition    `json:"position" validate:"required"`
 	Style               ModelStyle       `json:"style" validate:"required"`
+	Parameters          []ModelParameter `json:"parameters,omitempty"`
+	ModelColors         ModelColors      `json:"modelColors,omitempty"`
 }
 
 type ModelComponent struct {
-	ComponentID string `json:"componentId" validate:"required"`
-	ModelID     string `json:"modelId" validate:"required"`
+	InstanceID       string         `json:"instanceId" validate:"required"`
+	ModelID          string         `json:"modelId" validate:"required"`
+	InstanceMetadata *ModelMetadata `json:"instanceMetadata,omitempty"`
 }
