# front/src/lib/convertDevsToReactFlow/findParentModel.ts
@@ -1,11 +1,0 @@
-import type { components } from "@/api/v1";
-
-export function findParentModel(
-	nodeid: components["schemas"]["response.DiagramResponse"]["models"][number]["id"],
-	diagram: components["schemas"]["response.DiagramResponse"],
-) {
-	return diagram.models.find(
-		({ type, components }) =>
-			type === "coupled" && components?.includes(nodeid),
-	);
-}
